<package>
    <name>smach</name>
    <version>1.3.0</version>
    <description>
        SMACH, which stands for 'state machine', is a task-level
        architecture for rapidly creating complex robot behavior. At its
        core, SMACH is a ROS-independent Python library to build
        hierarchical state machines.  SMACH is a new library that takes
        advantage of very old concepts in order to quickly create robust
        robot behavior with maintainable and modular code.
    </description>
    <author>Jonathan Bohren</author>
    <license>BSD</license>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <url>https://github.com/contradict/executive_smach</url>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <rosdoc config="rosdoc.yaml"/>    
    </export>
</package>
