<package>
    <name>smach_msgs</name>
    <version>1.3.0</version>
    <description>
        This package contains a set of messages that are used in the
        internal debugging interface of a SMACH state
        machine. The <a href="http://www.ros.org/wiki/smach_viewer">smach
            viewer</a> uses this debugging interface to visualize complete
        hierarchical state machines.
    </description>
    <author>Jonathan Bohren</author>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <license>BSD</license>
    <url>https://github.com/contradict/executive_smach</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

</package>


