<package>
    <name>smach_ros</name>
    <version>1.3.0</version>
    <description>
        The smach_ros package contains extensions for the SMACH library to
        integrate it tightly with ROS.  For example, SMACH-ROS can call
        ROS services, listen to ROS topics, and integrate
        with <a href="http://www.ros.org/wiki/actionlib">actionlib</a>
        both as a client, and a provider of action servers.  SMACH is a
        new library that takes advantage of very old concepts in order to
        quickly create robust robot behavior with maintainable and modular
        code.
    </description>
    <author>Jonathan Bohren</author>
    <license>BSD</license>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <url>https://github.com/contradict/executive_smach</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>rostopic</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>smach</build_depend>
    <build_depend>smach_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <!--
    <build_depend>std_srvs</build_depend>
    <build_depend>rostest</build_depend>
    -->

    <run_depend>rospy</run_depend>
    <run_depend>rostopic</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>smach</run_depend>
    <run_depend>smach_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>

    <export>
        <rosdoc config="rosdoc.yaml"/>    
    </export>

</package>


